src/test/deca/context/invalid/created/object/equals_float_boolean.deca
// Description :
//    test equals entre un float et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: 
class A{}
{
float a;
boolean b;
int c = a.equal(b);
}
